--- a/st_veronica_foundation/templates/base.html
+++ b/st_veronica_foundation/templates/base.html
@@ -26,6 +26,9 @@
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/st_veronica_foundation.css' %}">
 
+        {# Bootstrap #}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
         {% endblock %}
@@ -38,6 +41,8 @@
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/st_veronica_foundation.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
